<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/title" />
        <EditText 
            android:id="@+id/title" 
            android:layout_width="0dip"    
            android:layout_height="wrap_content" 
            android:layout_weight="1" 
            android:inputType="textCapWords"/>
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/body_text" />
    <EditText 
        android:id="@+id/insertdata" 
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:inputType="textAutoCorrect" />
    
    <LinearLayout 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button 
            android:id="@+id/save" 
           	android:text="@string/save"
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" />
        <Button 
            android:id="@+id/cut" 
            android:text="@string/cut" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        <Button 
            android:id="@+id/copy" 
            android:text="@string/copy" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        <Button 
            android:id="@+id/paste" 
            android:text="@string/paste" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" />
        <Button 
            android:id="@+id/back" 
            android:text="@string/back"  
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/back"
        	android:textColor="#FFFFFF"
        	android:paddingTop="10sp"
        	android:drawablePadding="-15sp" />
    </LinearLayout>
</LinearLayout>